Service layer added, shell commands added